Linkerd/error-injector-service.yml
apiVersion: v1
kind: Service
metadata:
  name: error-injector
  namespace: squidgame
spec:
  ports:
  - name: service
    port: 5000
  selector:
    app: error-injector
