Linkerd/root-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myapp
  name: myapp
  namespace: squidgame
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: myapp
  type: ClusterIP
status:
  loadBalancer: {}
