Linkerd/Ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: minimal-ingress 
  annotations: 
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/service-upstream: "true"
  namespace: squidgame
spec: 
  rules: 
  - host: 35.224.176.158.nip.io
    http: 
      paths: 
      - path: /
        pathType: Prefix 
        backend: 
          service: 
            name: svc-grpc-rabbit 
            port: 
              number: 5000
