Linkerd/ingress-queues.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: queues-ingress-nginx
  namespace: squidgame
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 35.222.121.43.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-grpc-kafka
            port:
              number: 3000
